# RepoMuse

./: AGENTS.md  README.md  index.html  package-lock.json  package.json  repomix-output.md  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  analysis.rs  cache.rs  db.rs  fs_utils.rs  insights.rs  main.rs  projects.rs  storage.rs
src/components/: CodeAnalyzer.tsx  FolderSelector.tsx  IdeaGenerator.tsx  MarkdownRenderer.tsx  ProjectAnalyzer.tsx  ProjectHeader.tsx  ProjectInsights.tsx  ProjectList.tsx  Settings.tsx  TaskList.tsx
src/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Fieldset.tsx  FormHelp.tsx  FormLabel.tsx  FormRow.tsx  HeaderNav.tsx  SectionHeader.tsx  Select.tsx  SidebarListItem.tsx  Spinner.tsx  StatTile.tsx  Tabs.tsx  TextField.tsx  ThemeToggle.tsx  ToastProvider.tsx
src/contexts/: ThemeContext.tsx
src/types/: index.ts
src/utils/: api.ts  db-utils.ts  format.ts  models.ts  storage.ts  theme.ts
