[package]
name = "repomuse"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "repomuse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "time"] }
ignore = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
regex = "1"
dirs = "5"
chrono = "0.4"
rayon = "1.10"
bincode = "1.3"
once_cell = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
