[package]
name = "repomuse"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "repomuse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "time"] }
ignore = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
regex = "1"
dirs = "5"
chrono = "0.4"
rayon = "1.10"
once_cell = "1"
rusqlite = { version = "0.31", features = ["bundled", "blob", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
bincode = "1.3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
